svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-nodeport
spec:
  type: NodePort
  selector:
    app: nginx-multitool
  ports:
    - name: nginx-http
      port: 80
      targetPort: 80
      nodePort: 30080
